# clipstash

./: .env  .gitignore  Cargo.toml
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: ctx.rs  hitcounter.rs  mod.rs  renderer.rs
src/lib/web/api/: catcher.rs  error.rs  mod.rs  routes.rs
src/lib/web/http/: catcher.rs  mod.rs  routes.rs
static/: clipstash.css  tiny-date-picker.min.css  tiny-date-picker.min.js
templates/: error_box.hbs  footer.hbs  header.hbs
