[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
derive_more = "0.99.17"
handlebars = { version = "4.3.7", features = ["dir_source"] }
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.2", features = ["serde", "v4"]}

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.5.0"
